force-app/main/default/objects/Schedule_A_Shred_Location__c/Schedule_A_Shred_Location__c.object-meta.xml
<CustomObject>
    <description>Customer Account Shred Location object</description>
    <label>tobedeleted_Schedule A Shred Location</label>
    <nameField>
        <displayFormat>SI-{00000}</displayFormat>
        <label>Shred Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedule A Shred Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>