force-app/main/default/objects/Schedule_A_Shred_Location__c/fields/Container_Type__c.field-meta.xml
<CustomField>
    <fullName>Container_Type__c</fullName>
    <label>tobedeleted_Container Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Console</fullName>
            </value>
            <value>
                <fullName>65 Gal Bin</fullName>
            </value>
            <value>
                <fullName>95 Gal Bin</fullName>
            </value>
            <value>
                <fullName>1.2 CF Box</fullName>
            </value>
            <value>
                <fullName>Pallet (40bx)</fullName>
            </value>
            <value>
                <fullName>Meese</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>