force-app/main/default/objects/Schedule_A_Shred_Location__c/fields/New_Location__c.field-meta.xml
<CustomField>
    <fullName>New_Location__c</fullName>
    <label>tobedeleted_New Location?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Old</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>