force-app/main/default/objects/Schedule_A_Shred_Location__c/fields/Pickup_Model__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Model__c</fullName>
    <label>tobedeleted_Pickup Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Floor Walk</fullName>
            </value>
            <value>
                <fullName>Staged</fullName>
            </value>
            <value>
                <fullName>From IM Shelf</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>