force-app/main/default/objects/Schedule_A_Shred_Location__c/fields/Service_Location_Description__c.field-meta.xml
<CustomField>
    <fullName>Service_Location_Description__c</fullName>
    <label>tobedeleted_Service Location Description</label>
    <length>55</length>
    <type>Text</type>
</CustomField>